5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1724_2521.log
== TEST (2019-05-14 10:20:16) 
-- CODE:
n = int(input())
s = 0
t = i = 1

while(i<=n):
	t = t*(i/(2*i+1)
	s += t
	i += 1
pi = 2*(s+1)
print(round(pi,10))
-- ERROR:
File "XXXX", line 7
    s += t
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:41) 
-- CODE:
n = int(input())
s = 0
t = i = 1

while(i<=n):
	t = t*(i/(2*i+1))
	s += t
	i += 1
pi = 2*(s+1)
print(round(pi,10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:46) 
-- CODE:
n = int(input())
s = 0
t = i = 1

while(i<=n):
	t = t*(i/(2*i+1))
	s += t
	i += 1
pi = 2*(s+1)
print(round(pi,10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:49) 
-- CODE:
n = int(input())
s = 0
t = i = 1

while(i<=n):
	t = t*(i/(2*i+1))
	s += t
	i += 1
pi = 2*(s+1)
print(round(pi,10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:20:54) 
-- CODE:
n = int(input())
s = 0
t = i = 1

while(i<=n):
	t = t*(i/(2*i+1))
	s += t
	i += 1
pi = 2*(s+1)
print(round(pi,10))
-- EXECUTION TIME:
0.118061
-- TEST CASE 1:
---- input:
1560
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 2:
---- input:
1000
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
